tests/rosetta/transpiler/CPP/fermat-numbers.error
compile: exit status 1
/workspace/mochi/tests/rosetta/transpiler/CPP/fermat-numbers.cpp:12:10: fatal error: boost/multiprecision/cpp_int.hpp: No such file or directory
   12 | #include <boost/multiprecision/cpp_int.hpp>
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
